--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,11 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
     "pino": "^9.11.0",
     "pino-http": "^10.5.0",
