--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,47 @@
-# Logs
-logs
-*.log
+# ----- Node & monorepo (frontend + server) -----
+**/node_modules/
+**/.npm
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
+*.log
 
-node_modules
-dist
-dist-ssr
-*.local
+# ----- Builds / caches -----
+**/dist/
+**/build/
+**/.next/
+**/.cache/
+**/.vite/
+coverage/
+*.lcov
+*.tsbuildinfo
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# regla general:
+.env
+.env.*
+!.env.example
+server/.env
+server/.env.*
+!server/.env.example
+
+# ----- Datos locales / basura temporal -----
+tmp/
+temp/
+uploads/
+.mongodata/
+mongodata/
+.n8n/
+n8n_data/
+
+# ----- Editor / OS -----
+.vscode/
+.idea/
+*.swp
+*.swo
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# ----- Docker overrides locales -----
+docker-compose.override.yml
+.env.docker
