--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,16 @@
-version: "3.9"
-
 services:
   api:
     image: node:20-alpine
     working_dir: /app
     volumes:
-      - ./server:/app
+      - ./src/backend:/app         # antes: ./server:/app
     command: sh -c "npm install && npm run dev"
-    ports:
-      - "4000:4000"
-    env_file:
-      - ./server/.env
+    ports: ["4000:4000"]
+    env_file: [ ./src/backend/.env ]   # si usabas server/.env, cámbialo
     environment:
-      - CHOKIDAR_USEPOLLING=true   # Windows+Docker para que nodemon detecte cambios
+      - CHOKIDAR_USEPOLLING=true
     depends_on:
-      - mongo                      # no pasa nada si usas Atlas; queda como dependencia "suave"
+      - mongo
 
   web:
     image: node:20-alpine
@@ -22,37 +18,27 @@ services:
     volumes:
       - ./:/app
     command: sh -c "npm install && npm run dev -- --host 0.0.0.0 --port 5173"
-    ports:
-      - "5173:5173"
+    ports: ["5173:5173"]
     environment:
-      # Si usas esta var en tu front, apuntas a la API. Si no, no molesta.
       - VITE_API_URL=http://localhost:4000
-    depends_on:
-      - api
+    depends_on: [ api ]
 
   mongo:
     image: mongo:7
-    restart: unless-stopped
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongodata:/data/db
+    ports: ["27017:27017"]
+    volumes: [ mongodata:/data/db ]
 
   n8n:
     image: n8nio/n8n:latest
-    restart: unless-stopped
-    ports:
-      - "5678:5678"
+    ports: ["5678:5678"]
     environment:
       - N8N_HOST=localhost
       - N8N_PORT=5678
       - N8N_BASIC_AUTH_ACTIVE=true
       - N8N_BASIC_AUTH_USER=admin
       - N8N_BASIC_AUTH_PASSWORD=admin123
-    volumes:
-      - n8n_data:/home/node/.n8n
-    depends_on:
-      - api
+    volumes: [ n8n_data:/home/node/.n8n ]
+    depends_on: [ api ]
 
 volumes:
   mongodata:
