--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -7,12 +7,14 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.74.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
+    "multer": "^2.0.2",
     "pino": "^9.11.0",
     "pino-http": "^10.5.0",
     "zod": "^3.23.8"
