--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,37 @@
 services:
+  mongo:
+    image: mongo:7
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodata:/data/db
+    healthcheck:
+      test: ["CMD", "mongosh", "--quiet", "--eval", "db.adminCommand('ping').ok"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
   api:
     image: node:20-alpine
     working_dir: /app
     volumes:
-      - ./src/backend:/app         # antes: ./server:/app
+      - ./src/backend:/app
     command: sh -c "npm install && npm run dev"
-    ports: ["4000:4000"]
-    env_file: [ ./src/backend/.env ]   # si usabas server/.env, cámbialo
+    ports:
+      - "4000:4000"
+    env_file:
+      - ./src/backend/.env
     environment:
-      - CHOKIDAR_USEPOLLING=true
+
+      MONGODB_URI: mongodb://mongo:27017
+      DB_NAME: tvlc
+
+      CHOKIDAR_USEPOLLING: "true"
     depends_on:
-      - mongo
+      mongo:
+        condition: service_healthy
+    restart: unless-stopped
 
   web:
     image: node:20-alpine
@@ -18,28 +39,31 @@ services:
     volumes:
       - ./:/app
     command: sh -c "npm install && npm run dev -- --host 0.0.0.0 --port 5173"
-    ports: ["5173:5173"]
+    ports:
+      - "5173:5173"
     environment:
-      - VITE_API_URL=http://localhost:4000
-    depends_on: [ api ]
-
-  mongo:
-    image: mongo:7
-    ports: ["27017:27017"]
-    volumes: [ mongodata:/data/db ]
+      VITE_API_URL: http://localhost:4000
+    depends_on:
+      - api
+    restart: unless-stopped
 
   n8n:
     image: n8nio/n8n:latest
-    ports: ["5678:5678"]
+    ports:
+      - "5678:5678"
     environment:
-      - N8N_HOST=localhost
-      - N8N_PORT=5678
-      - N8N_BASIC_AUTH_ACTIVE=true
-      - N8N_BASIC_AUTH_USER=admin
-      - N8N_BASIC_AUTH_PASSWORD=admin123
-    volumes: [ n8n_data:/home/node/.n8n ]
-    depends_on: [ api ]
+      N8N_HOST: localhost
+      N8N_PORT: 5678
+      N8N_BASIC_AUTH_ACTIVE: "true"
+      N8N_BASIC_AUTH_USER: admin
+      N8N_BASIC_AUTH_PASSWORD: admin123
+    volumes:
+      - n8n_data:/home/node/.n8n
+    depends_on:
+      - api
+    restart: unless-stopped
 
 volumes:
   mongodata:
   n8n_data:
+
