--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "mock": "json-server --watch mock/db.json --routes mock/routes.json --port 5050 --delay 200 --cors",
+    "mock:open": "npm run mock"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
@@ -34,7 +36,10 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
     "jsdom": "^27.0.0",
+    "json-server": "^1.0.0-beta.3",
     "vite": "^7.1.7",
     "vitest": "^3.2.4"
   }
 }
+
+
