chore(jest): estabiliza config (transformIgnorePatterns, export conditions) y mocks test(frontend): agrega y corrige tests (Login, ProtectedRoute, RoleBlockOverlay, Asignaciones, Lecturas); matchers robustos

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ Thumbs.db
 # ----- Docker overrides locales -----
 docker-compose.override.yml
 .env.docker
+
+node_modules/
+coverage/
+.jest-cache/
