--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,34 +2,36 @@ name: CI
 
 on:
   push:
-    branches: [ main, develop ]
   pull_request:
 
 jobs:
-  backend:
-    runs-on: ubuntu-latest
-    defaults: { run: { working-directory: src/backend } }
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with: { node-version: '20' }
-      - run: npm ci
-      - run: npm run coverage
-      - uses: actions/upload-artifact@v4
-        with:
-          name: coverage-backend
-          path: src/backend/coverage
-
   frontend:
     runs-on: ubuntu-latest
-    defaults: { run: { working-directory: src/frontend } }
+    defaults:
+      run:
+        working-directory: src/frontend
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with: { node-version: '20' }
-      - run: npm ci
-      - run: npm run coverage
-      - uses: actions/upload-artifact@v4
         with:
-          name: coverage-frontend
-          path: src/frontend/coverage
+          node-version: 20
+          cache: npm
+          cache-dependency-path: src/frontend/package-lock.json
+      
+      - run: npm install --no-audit --no-fund
+      - run: npm test -- --coverage --watchAll=false
+
+  backend:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: src/backend
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: src/backend/package-lock.json
+      - run: npm ci || npm install --no-audit --no-fund
+      - run: npm test -- --coverage --watchAll=false
