--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,36 +2,63 @@ name: CI
 
 on:
   push:
+    branches: [ main, develop, feat/* ]
   pull_request:
 
 jobs:
   frontend:
+    name: frontend
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: src/frontend
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
           cache-dependency-path: src/frontend/package-lock.json
-      
-      - run: npm install --no-audit --no-fund
-      - run: npm test -- --coverage --watchAll=false
+
+      - name: Install dependencies
+        run: |
+          if [ -f package-lock.json ] || [ -f npm-shrinkwrap.json ]; then
+            npm ci
+          else
+            echo "No lockfile found. Using npm install."
+            npm install
+          fi
+
+      - name: Test
+        run: npm test -- --coverage --watchAll=false
 
   backend:
+    name: backend
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: src/backend
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
           cache-dependency-path: src/backend/package-lock.json
-      - run: npm ci || npm install --no-audit --no-fund
-      - run: npm test -- --coverage --watchAll=false
+
+      - name: Install dependencies
+        run: |
+          if [ -f package-lock.json ] || [ -f npm-shrinkwrap.json ]; then
+            npm ci
+          else
+            npm install
+          fi
+
+      - name: Test
+        run: npm test -- --coverage --watchAll=false
