--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -23,5 +23,8 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0"
+  },
+  "dependencies": {
+    "react-router-dom": "7.9.4"
   }
 }
