--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,34 +17,17 @@ services:
     working_dir: /app
     volumes:
       - ./src/backend:/app
-    command: sh -c "npm install && npm run dev"
+    command: sh -c "npm run dev"
     ports:
       - "4000:4000"
     env_file:
       - ./src/backend/.env
     environment:
 
-      MONGODB_URI: mongodb://mongo:27017
-      DB_NAME: tvlc
-
       CHOKIDAR_USEPOLLING: "true"
     depends_on:
       mongo:
         condition: service_healthy
-    restart: unless-stopped
-
-  web:
-    image: node:20-alpine
-    working_dir: /app
-    volumes:
-      - ./:/app
-    command: sh -c "npm install && npm run dev -- --host 0.0.0.0 --port 5173"
-    ports:
-      - "5173:5173"
-    environment:
-      VITE_API_URL: http://localhost:4000
-    depends_on:
-      - api
     restart: unless-stopped
 
   n8n:
