--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -11,6 +11,7 @@
     "coverage:strict": "cross-env NODE_ENV=test jest --coverage --runInBand --coverageThreshold='{\"global\":{\"lines\":50,\"statements\":50,\"branches\":40,\"functions\":50}}'"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.74.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
