--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
     environment:
       N8N_HOST: localhost
       N8N_PORT: 5678
+      N8N_PROTOCOL: http
       N8N_BASIC_AUTH_ACTIVE: "true"
       N8N_BASIC_AUTH_USER: admin
       N8N_BASIC_AUTH_PASSWORD: admin123
@@ -44,8 +45,6 @@ services:
       - n8n_data:/home/node/.n8n
     depends_on:
       - api
-    restart: unless-stopped
-
 volumes:
   mongodata:
   n8n_data:
